Login page styles

--- a/client/css/pages/_login.scss
+++ b/client/css/pages/_login.scss
@@ -1,3 +1,16 @@
-.login-page .hero {
-    background-color: #13A7C7;
+.login-page .page-content {
+    max-width: 480px;
+    margin: 0 auto;
+}
+
+.login-page .forgot-link {
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    font-size: .9rem;
+}
+
+.login-page .action-buttons {
+    margin-top: 4rem;
+    text-align: center;
 }
