Remove unused scripts, update to AngularJS 1.2.4

--- a/client/index.ejs
+++ b/client/index.ejs
@@ -34,15 +34,11 @@
   </div>
 
   <script src="lib/jquery/jquery-1.10.2.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular.js"></script>
-  <script src="http://code.angularjs.org/snapshot/angular-sanitize.js"></script>
-  <script src="http://code.angularjs.org/snapshot/angular-route.js"></script>
-  <script src="http://code.angularjs.org/snapshot/angular-resource.js"></script>
-  <script src="http://code.angularjs.org/snapshot/angular-animate.js"></script>
-  <script src="lib/angular/ui/utils.js"></script>
-  <script src="lib/angular/ui/event.js"></script>
-  <script src="lib/angular/ui/ui-map.js"></script>
-  <!--<script src="lib/angular/touch/angular-touch.min.js"></script>-->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.4/angular.js"></script>
+  <script src="http://code.angularjs.org/1.2.4/angular-sanitize.js"></script>
+  <script src="http://code.angularjs.org/1.2.4/angular-route.js"></script>
+  <script src="http://code.angularjs.org/1.2.4/angular-resource.js"></script>
+  <script src="http://code.angularjs.org/1.2.4/angular-animate.js"></script>
   <script src='lib/fastclick/fastclick.js'></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
