Text updates, remove unused button

--- a/client/views/header.html
+++ b/client/views/header.html
@@ -2,18 +2,12 @@
 
     <!-- Left side button -->
     <div class="header-button left">
-        <button
-            type="button"
-            ng-show="$route.current.$$route.access=='private'"
-            ng-click="go('back', 'slideRight')"
-        >
-            <i class="fi-arrow-left"></i>
-        </button>
+
     </div>
 
     <!-- Page title -->
     <div class="header-center">
-        <h1 class="page-title">{{appState.page.title}}</h1>
+        <h1 class="site-title">Seed</h1>
     </div>
 
     <!-- Right side button -->
