Project name change

--- a/client/index.ejs
+++ b/client/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en" ng-controller="AppCtrl" ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>REST/MEAN Seed App</title>
+  <title>MEAN Seed App</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
