--- a/client/css/style.scss
+++ b/client/css/style.scss
@@ -8,6 +8,9 @@
 /* Framework */
 @import "../lib/foundation/foundation";
 
+/* Fonts */
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,700);
+
 /* CSS Modules */
 @import "modules/_fonts";
 @import "modules/_global";
