--- a/client/css/modules/_headers.scss
+++ b/client/css/modules/_headers.scss
@@ -43,7 +43,7 @@ and (max-device-width : 568px)
 and (-webkit-min-device-pixel-ratio: 2) {
 
 	.header-container {
-		position: -webkit-sticky;
+		// position: -webkit-sticky;
 	}
 
 }
