--- a/client/index.ejs
+++ b/client/index.ejs
@@ -33,13 +33,13 @@
     <div ng-view class="application-view" ng-class="pageAnimationClass"></div>
   </div>
 
-  <script src="lib/jquery/jquery-1.10.2.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.4/angular.js"></script>
-  <script src="http://code.angularjs.org/1.2.4/angular-sanitize.js"></script>
-  <script src="http://code.angularjs.org/1.2.4/angular-route.js"></script>
-  <script src="http://code.angularjs.org/1.2.4/angular-resource.js"></script>
-  <script src="http://code.angularjs.org/1.2.4/angular-animate.js"></script>
-  <script src='lib/fastclick/fastclick.js'></script>
+  <script src="lib/jquery/jquery.min.js"></script>
+  <script src="lib/angular/angular.min.js"></script>
+  <script src="lib/angular-sanitize/angular-sanitize.min.js"></script>
+  <script src="lib/angular-route/angular-route.min.js"></script>
+  <script src="lib/angular-resource/angular-resource.min.js"></script>
+  <script src="lib/angular-animate/angular-animate.min.js"></script>
+  <script src="lib/fastclick/lib/fastclick.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
