--- a/client/index.ejs
+++ b/client/index.ejs
@@ -34,11 +34,11 @@
   </div>
 
   <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/angular/angular.min.js"></script>
-  <script src="lib/angular-sanitize/angular-sanitize.min.js"></script>
-  <script src="lib/angular-route/angular-route.min.js"></script>
-  <script src="lib/angular-resource/angular-resource.min.js"></script>
-  <script src="lib/angular-animate/angular-animate.min.js"></script>
+  <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular-sanitize/angular-sanitize.js"></script>
+  <script src="lib/angular-route/angular-route.js"></script>
+  <script src="lib/angular-resource/angular-resource.js"></script>
+  <script src="lib/angular-animate/angular-animate.js"></script>
   <script src="lib/fastclick/lib/fastclick.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
