--- a/client/css/modules/_pages.scss
+++ b/client/css/modules/_pages.scss
@@ -4,30 +4,8 @@
     color: #555555;
 }
 
-.page-content,
-.hero {
-    padding: 82px 2rem 2rem;
-}
-
-.hero h1 {
-    font-family: "Open Sans", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
-    font-weight: 600;
-    color: #FFF;
-}
-
-/* footer */
-.page-footer {
-    margin-top: 30px;
-    height: 50px;
-    width: 100%;
-    text-align: center;
-    font-size: 0.65rem;
-    line-height: 150%;
-    color: rgba(110,127,123,1);
-    text-transform: uppercase;
-}
-.page-footer span {
-	font-size: 1rem;
+.page-content{
+    padding-top: 50px;
 }
 
 @media only screen
@@ -36,6 +14,6 @@ and (max-device-width : 568px)
 and (-webkit-min-device-pixel-ratio: 2) {
 
     .page {
-        height: auto;
+        min-height: 100%;
     }
 }
