--- a/client/views/header.html
+++ b/client/views/header.html
@@ -1,24 +1,9 @@
 <div class="header-container">
 
-    <!-- Left side button -->
-    <div class="header-button left">
-
-    </div>
-
-    <!-- Page title -->
-    <div class="header-center">
-        <h1 class="site-title">Seed</h1>
-    </div>
-
-    <!-- Right side button -->
-    <div class="header-button right">
-        <button
-            type="button"
-            ng-show="$route.current.$$route.access=='private'"
-            ng-click="go('/settings', 'slideLeft')"
-        >
-            <i class="fi-wrench"></i>
-        </button>
-    </div>
+  <nav class="tab-bar">
+    <section class="left-small">
+      <a class="left-off-canvas-toggle menu-icon" ><span></span></a>
+    </section>
+  </nav>
 
 </div>
