--- a/client/css/modules/_global.scss
+++ b/client/css/modules/_global.scss
@@ -67,33 +67,7 @@ h1 {
     left: 0;
     height: 100%;
     width: 100%;
+    overflow-y: auto;
     -webkit-backface-visibility: hidden;
     perspective: 1000;
-}
-
-/* media queries */
-
-/* Smaller than standard 1024 (devices and browsers) */
-@media only screen and (max-width: 1023px) {
-
-}
-
-/* Tablet Portrait size to standard 960 (devices and browsers) */
-@media only screen and (min-width: 768px) {
-
-}
-
-/* All Mobile Sizes (devices and browser) */
-@media only screen and (max-width: 767px) {
-
-}
-
-/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-
-}
-
-/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
-@media only screen and (max-width: 479px) {
-
 }
