--- a/client/views/header.html
+++ b/client/views/header.html
@@ -1,9 +1,14 @@
 <div class="header-container">
 
-  <nav class="tab-bar">
-    <section class="left-small">
-      <a class="left-off-canvas-toggle menu-icon" ><span></span></a>
-    </section>
-  </nav>
+    <nav class="top-bar">
+        <ul class="title-area">
+            <li class="name">
+                <h1><a ng-click="go('/', 'slideRight')">mean seed</a></h1>
+            </li>
+            <!-- <li class="toggle-topbar menu-icon" >
+                <a><span>Menu</span></a>
+            </li> -->
+        </ul>
+    </nav>
 
 </div>
