--- a/client/css/modules/_animations.scss
+++ b/client/css/modules/_animations.scss
@@ -5,12 +5,41 @@
 // NOTE: ngAnimate has changed in v1.2.0. We no longer need ng-animate directives as it's all class-
 // based now. See: http://docs.angularjs.org/api/ngAnimate
 
+/*------------------------
+ * Enter/Leave Animations
+ ------------------------*/
+
 // Default Enter/Leave
 .ng-enter,
 .ng-leave {
     transition-timing-function: ease;
     transition-duration: 200ms;
     transition-property: opacity;
+}
+
+// Fade In/Out
+.crossFade {
+
+}
+
+.crossFade.ng-enter {
+    transition-property: none;
+    opacity: 0;
+}
+
+.crossFade.ng-enter.ng-enter-active {
+    transition-property: opacity;
+    opacity: 1
+}
+
+.crossFade.ng-leave {
+    transition-property: opacity;
+    opacity: 1
+}
+
+.crossFade.ng-leave.ng-leave-active {
+    transition-property: opacity;
+    opacity: 0;
 }
 
 // slideRight
@@ -113,46 +142,10 @@
     transform: translate3d(0,-100%,0);
 }
 
+/*------------------------
+ * Hide/Show Animations
+ ------------------------*/
 
-// Default Show/Hide
-// .ng-hide-add,
-// .ng-hide-remove {
-//     transition-property: all;
-//     transition-timing-function: ease;
-//     transition-duration: 10s;
-//     display: block!important;
-// }
-
-// .ng-hide-add.ng-hide-add-active,
-// .ng-hide-remove {
-//     opacity: 0;
-// }
-
-// .ng-hide-add,
-// .ng-hide-remove.ng-hide-remove-active {
-//     opacity: 1;
-// }
-
-// Slide up/down
-// .slideDownUp.ng-hide-add,
-// .slideDownUp.ng-hide-remove {
-//     transition-property: all;
-//     transition-timing-function: ease;
-//     transition-duration: 250ms;
-//     display: block!important;
-// }
-
-// .slideDownUp.ng-hide-add.ng-hide-add-active,
-// .slideDownUp.ng-hide-remove {
-//     transform: translate3d(0,-100%,0);
-//     opacity: 1;
-// }
-
-// .slideDownUp.ng-hide-add,
-// .slideDownUp.ng-hide-remove.ng-hide-remove-active {
-//     transform: translate3d(0,0,0);
-//     opacity: 1;
-// }
 .animate.ng-hide-add,
 .animate.ng-hide-remove,
 .animate.ng-show-add,
