Add persistent sessions
Refactor login flow to include a ‘remember me’ option to create a long-term session cookie. Move ‘forgot password’ link to password field label to make room for remember option.

--- a/client/css/pages/_login.scss
+++ b/client/css/pages/_login.scss
@@ -1,6 +1,7 @@
 .login-page .forgot-link {
-    display: block;
+    font-size: .75rem;
+}
+
+.login-page .remember-check {
     text-align: center;
-    margin: 0 auto;
-    font-size: .9rem;
 }
