--- a/client/views/header.html
+++ b/client/views/header.html
@@ -1,14 +1,12 @@
 <div class="header-container">
 
-    <nav class="top-bar">
-        <ul class="title-area">
-            <li class="name">
-                <h1><a ng-click="go('/', 'slideRight')">mean seed</a></h1>
-            </li>
-            <!-- <li class="toggle-topbar menu-icon" >
-                <a><span>Menu</span></a>
-            </li> -->
-        </ul>
+    <nav class="tab-bar">
+        <section class="left tab-bar-section">
+            <h1>
+                <a ng-click="go('/', 'slideRight')">mean seed</a>
+            </h1>
+        </section>
+        <section class="right-small"><a class=" menu-icon"><span></span></a></section>
     </nav>
 
 </div>
