--- a/client/css/modules/_headers.scss
+++ b/client/css/modules/_headers.scss
@@ -1,16 +1,25 @@
 .header-container {
-    position: fixed;
+    position: absolute;
     top: 0;
     z-index: 9;
     width: 100%;
-    height: 50px;
-    background-color: #222222;
     color: #FFF;
 }
 
-.header-container nav.tab-bar h1 a {
-    color: #FFF;
-    font-weight: normal;
+.header-container a.menu-icon {
+    text-indent: 2.1875rem;
+    width: 2.8125rem;
+    height: 2.8125rem;
+    display: block;
+    line-height: 2.0625rem;
+    padding: 0;
+    color: white;
+    position: relative;
+}
+
+.header-container a.menu-icon span {
+    white-space: nowrap;
+    font-family: 'Helvetica Neue', Helvetica, Helvetica, Arial, sans-serif;
 }
 
 .header-container nav.tab-bar h1 a:hover {
