Homepage and side menu layout
Add hero block and side menu

--- a/client/css/style.scss
+++ b/client/css/style.scss
@@ -12,6 +12,7 @@
 @import "modules/_fonts";
 @import "modules/_global";
 @import "modules/_headers";
+@import "modules/_menus";
 @import "modules/_pages";
 @import "modules/_forms";
 @import "modules/_messages";
@@ -21,3 +22,4 @@
 @import "pages/_login";
 @import "pages/_signup";
 @import "pages/_profile";
+@import "pages/_home";
