--- a/client/views/header.html
+++ b/client/views/header.html
@@ -9,7 +9,7 @@
     <nav class="top-bar hide-for-small" data-topbar="">
         <ul class="title-area">
             <li class="name">
-                <h1><a ng-click="go('/', 'slideRight')">mean seed</a></h1>
+                <h1><a ng-click="go('/home', 'slideRight')">mean seed</a></h1>
             </li>
         </ul>
 
