--- a/client/index.ejs
+++ b/client/index.ejs
@@ -45,6 +45,8 @@
 
     </div>
 
+    <!-- Vendor Libraries -->
+    <!-- build:js js/vendor.js -->
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-sanitize/angular-sanitize.js"></script>
@@ -52,11 +54,16 @@
     <script src="lib/angular-resource/angular-resource.js"></script>
     <script src="lib/angular-animate/angular-animate.js"></script>
     <script src="lib/fastclick/lib/fastclick.js"></script>
+    <!-- endbuild -->
+
+    <!-- Application JS -->
+    <!-- build:js js/app.js -->
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/filters.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/app.js"></script>
+    <!-- endbuild -->
 
     <!-- Inject the live reload script if this is running in the dev environment -->
     <% if (env === 'development') { %>
