Styles and layout
Custom style overrides and layouts for mean seed site

--- a/client/css/modules/_forms.scss
+++ b/client/css/modules/_forms.scss
@@ -44,7 +44,12 @@ select {
     margin: 0 .5rem;
 }
 
+a.button {
+    background-color: #d09d01;
+}
+
 a.button:hover,
 a.button:active {
     text-decoration: none;
+    background-color: #b18601;
 }
